@@ -1,3 +1,14 @@
+2002-10-22  Chris Blumenberg  <cblu@apple.com>
+
+	Use the mouseDown point instead of the mouseDragged point to determine the mouseOffset when dragging images. When you drag an image now, the point where you clicked is the point where the cursor is in relation to the drag image.
+
+        * WebView.subproj/WebHTMLView.m:
+        (-[WebHTMLView mouseDown:]): retain the mouse down event
+        (-[WebHTMLView mouseDragged:]): use the mouse down event
+        * WebView.subproj/WebHTMLViewPrivate.h:
+        * WebView.subproj/WebHTMLViewPrivate.m:
+        (-[WebHTMLViewPrivate dealloc]): release the mouse down event
+
 2002-10-21  Darin Adler  <darin@apple.com>
 
         * WebCoreSupport.subproj/WebViewFactory.h: Changed to use new protocol scheme so we
